--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -1,3 +1,12 @@
+@Manual{R,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2016},
+  url = {https://www.R-project.org/},
+}
+
 @article{huang2013targeted,
   title={Targeted versus universal decolonization to prevent ICU infection},
   author={Huang, Susan S and Septimus, Edward and Kleinman, Ken and Moody, Julia and Hickok, Jason and Avery, Taliser R and Lankiewicz, Julie and Gombosev, Adrijana and Terpstra, Leah and Hartford, Fallon and others},
